@@ -1,3 +1,6 @@
+202107020
+Correct DVB-T Frequency Calculation
+
 202105310
 RX Sarsat activation/désactivation CRC NULL (Balise F1LVT Checksum à 0)
 
